<resources>
    <string name="appName">TODO</string>
    <string name="create">Dodaj</string>
    <string name="cancel">Anuluj</string>
    <string name="newTitle">Nowa lista:</string>
    <string name="newTask">Nowe zadanie:</string>
    <string name="notInserted">Nie udało się dodać elementu</string>
    <string name="edit"> Edytuj</string>
    <string name="acceptEdit">OK</string>
    <string name="delete"> Usuń</string>
    <string name="done">Zrobione</string>
    <string name="notDone"> Nie zrobione</string>
    <string name="addTitle">Dodano listę</string>
    <string name="empty">Pole nie może być puste</string>
    <string name="save">Zapisz do pliku</string>
    <string name="close"> Zamknij aplikację</string>
    <string name="closeApp">Aplikacja została zamknięta</string>
    <string name="saveFile">Dane zostały zapisane w folderze Download</string>
    <string name="appNameToFile">TODO</string>
    <string name="permissionDenied">Brak zezwolenia na dostęp. \n Nie zapisano pliku</string>
    <string name="deleteTitle">Czy na pewno chcesz usunąć listę o nazwie </string>
    <string name="deleteTask">Czy na pewno chcesz usunąć zadanie o treści </string>
    <string name="yes">Tak</string>
    <string name="no">Nie</string>
    <string name="isDelete">Usunięte</string>
    <string name="notDelete">Usuwanie nie powiodło się</string>
    <string name="mainTitle">Twoje listy:</string>
    <string name="taskTitle">Lista: </string>
</resources>
